--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -1,9 +1,7 @@
 name: auto-build-deploy
 
-on:
-      push:
-            branches:
-                  - 'deploy'
+on: [push]
+
 jobs:
       active-check:
             runs-on: ubuntu-latest
