--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -24,6 +24,17 @@ jobs:
             steps:
                   - uses: actions/checkout@v2
                   - name: Use Node.js ${{ matrix.node-version }}
+                    env:
+                          JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+                          DB_HOST: ${{ secrets.DB_HOST }}
+                          DB_PORT: ${{ secrets.DB_PORT }}
+                          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+                          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+                          DB_NAME: ${{ secrets.DB_NAME }}
+                          REDIS_PORT: ${{ secrets.REDIS_PORT }}
+                          REDIS_DB_NUMBER: ${{ secrets.REDIS_DB_NUMBER }}
+                          REDIS_HOST: ${{ secrets.REDIS_HOST }}
+
                     uses: actions/setup-node@v1
                     with:
                           node-version: ${{ matrix.node-version }}
