--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
             "start:prod": " NODE_ENV=production node dist/main",
             "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
             "test": "NODE_ENV=test jest --runInBand  --forceExit",
-            "test:ci": "NODE_ENV=test jest --runInBand ticTacToe.*.ts  --forceExit",
+            "test:ci": "NODE_ENV=CI jest --runInBand ticTacToe.*.ts  --forceExit",
             "test:watch": "NODE_ENV=test  jest --watch --runInBand ",
             "test:cov": "NODE_ENV=test  jest --coverage --runInBand  --forceExit",
             "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
