--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -40,7 +40,7 @@ jobs:
                     with:
                           node-version: ${{ matrix.node-version }}
                   - run: yarn install
-                  - run: yarn test:ci
+                  - run: yarn start:ci
 
       coverage-reporter:
             needs: test
