--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,5 @@ services:
             ports:
                   - 3400:3306
             environment:
-                  MYSQL_DATABASE: mychess
+                  MYSQL_DATABASE: myChessTest
                   MYSQL_ROOT_PASSWORD: 131367Nhan
-       
