--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -52,7 +52,7 @@ jobs:
                     uses: codacy/codacy-coverage-reporter-action@v1
                     with:
                           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-                          coverage-reports: /coverage/lcov.info
+                          coverage-reports: coverage/lcov.info
       build-push:
             needs: coverage-reporter
             runs-on: ubuntu-latest
