--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -51,7 +51,7 @@ jobs:
                     uses: codacy/codacy-coverage-reporter-action@v1
                     with:
                           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-                          coverage-reports: lcov.info
+                          coverage-reports: lcov.info final
       # build-push:
       #       needs: coverage-reporter
       #       runs-on: ubuntu-latest
