--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -42,7 +42,7 @@ jobs:
                   - run: yarn install
                   - run: yarn test:ci
 
-      codacy-coverage-reporter:
+      coverage-reporter:
             runs-on: ubuntu-latest
             name: codacy-coverage-reporter
 
