--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -72,8 +72,8 @@ jobs:
                     uses: docker/build-push-action@v2
                     id: docker_build_server
                     with:
-                          context: ./server
-                          file: ./server/Dockerfile
+                          context: .
+                          file: ./Dockerfile
                           builder: ${{steps.buildx.outputs.name}}
                           push: true
                           tags: heaty566/jest-test-server:latest
