--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -1,6 +1,12 @@
 name: auto-build-deploy
 
-on: [push]
+on:
+      push:
+            branches:
+                  - master
+      pull_request:
+            branches:
+                  - master
 
 jobs:
       active-check:
